feat: implement register product page

--- a/app.json
+++ b/app.json
@@ -12,13 +12,23 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "Este aplicativo usa a câmera para tirar fotos.",
+        "NSPhotoLibraryUsageDescription": "Este aplicativo precisa acessar a biblioteca de fotos para selecionar imagens.",
+        "NSPhotoLibraryAddUsageDescription": "Este aplicativo precisa acessar a biblioteca de fotos para salvar imagens."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
